<resources>
    <string name="app_name">My Application</string>
    <string name="employer">Employer</string>
    <string name="employee">Employee</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Registration</string>
    <string name="employee_id">Employee ID</string>
    <string name="employer_id">Employer ID</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_as">Register as :</string>
    <string name="log_in">Log In</string>
    <string name="login">Login</string>
    <string name="hello_user">Hello User</string>
    <string name="logout">LogOut</string>
    <string name="Company">Company</string>
    <string name="Register_the_company_header">Register the Workplace</string>
    <string name="license">License #</string>
    <string name="location">Location</string>
    <string name="register_company">Register Company</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_license">Enter License #</string>
    <string name="enter_location">Enter Location</string>
    <string name="items_poster_name_label">Poster:</string>
    <string name="input_poster_name">input poster name</string>
    <string name="post">POST</string>
    <string name="comment">Comment</string>
    <string name="group">Group</string>
    <string name="group_post">Group Post</string>
    <string name="register_employee">Register Employee</string>
    <string name="leader">Leader</string>
    <string name="member">Member</string>
    <string name="choose_grp">Choose Group</string>
    <string name="name">Name</string>
    <string name="welcome_to_workcomms">Welcome to WorkComms</string>
    <string name="register_employer_account">REGISTER EMPLOYER ACCOUNT</string>
    <string name="register_a_workplace">Register a WorkPlace</string>
    <string name="textview">TextView</string>
</resources>