<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterCompany">

    <TextView
        android:id="@+id/register_company_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="47dp"
        android:text="@string/Register_the_company_header"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/name_of_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editText_company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#78909C"
        android:textSize="18sp"
        android:textColor="@color/light_blue"
        android:backgroundTint="@color/orange"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/license_number_of_the_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:text="@string/license"
        android:textAlignment="center"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editText_license"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/enter_license"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#78909C"
        android:textSize="18sp"
        android:textColor="@color/light_blue"
        android:backgroundTint="@color/orange"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/location_of_the_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:text="@string/location"
        android:textAlignment="center"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editText_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/enter_location"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#78909C"
        android:textSize="18sp"
        android:textColor="@color/light_blue"
        android:backgroundTint="@color/orange"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button_register_company_register_activity"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register_company" />
</LinearLayout>