<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterEmployee">

    <TextView
        android:id="@+id/register_employee_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="45dp"
        android:text="@string/register_employee"
        android:textColor="@color/dark_blue"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="10dp"
        android:text="@string/name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edittext_name_employee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:backgroundTint="@color/orange"
        android:minHeight="48dp"
        android:hint="@string/name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/email"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edittext_email_employee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/email"
        android:backgroundTint="@color/orange"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/dark_blue"
                android:text="@string/register_as"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group_employee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <RadioButton
                    android:id="@+id/radioButton_leader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leader"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioButton_member"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/member"
                    android:textSize="16sp" />

            </RadioGroup>
        </LinearLayout>

        <Spinner
            android:id="@+id/spinner_choose_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="45dp"
            android:minHeight="48dp" />

    </LinearLayout>

    <Button
        android:id="@+id/register_employee_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:minHeight="48dp"
        android:text="@string/register_employee" />

</LinearLayout>