<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainMenu">

    <TextView
        android:id="@+id/message_main_menu"
        android:layout_width="281dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/hello_user" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView_main_menu"
        android:layout_width="match_parent"
        android:layout_height="516dp"
        android:background="#E0F7FA" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/logout_main_menu"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/logout" />

        <Button
            android:id="@+id/post_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/post"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView_bot_nav_main_menu"
        android:layout_width="match_parent"
        android:layout_height="141dp" />
</LinearLayout>